k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # --- OPENTELEMETRY CONFIG ---
    # nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
    # # This name shows up as the Service Name in Tempo for the Ingress part of the trace
    # nginx.ingress.kubernetes.io/opentelemetry-operation-name: "ingress-nginx"
    # # If your app already started a trace, NGINX will join it rather than starting a new one
    # nginx.ingress.kubernetes.io/opentelemetry-trust-incoming-span: "true"
    # nginx.ingress.kubernetes.io/otlp-collector-host: "otel-collector.observability.svc.cluster.local"
    # nginx.ingress.kubernetes.io/otlp-collector-port: "4317"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      
      # --- USER API ROUTE ---
      - path: /user(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-api
            port:
              number: 80
      
      # --- POST API ROUTE ---
      - path: /post(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: post-api
            port:
              number: 80
      
      # --- COMMENT API ROUTE ---
      - path: /comment(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: comment-api
            port:
              number: 80
      
      # --- AUTH API ROUTE ---
      - path: /auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-api
            port:
              number: 80
